<resources>
    <string name="app_name">Scrum Poker</string>
    <string name="app_name_extended">Material Scrum Poker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_deck">Your delightfull deck of planning cards</string>

    <string name="created_by">Created by David Hardy</string>
    <string name="website">http://www.endran.nl</string>
    <string name="action_licenses">Third party licenses</string>
    <string name="version_info">Version %1$s</string>

    <string name="zero">0</string>
    <string name="half">&#189;</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="thirty_four">34</string>
    <string name="forty">40</string>
    <string name="fifty_five">55</string>
    <string name="eighty_nine">89</string>
    <string name="xxs">XXS</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="hundred">100</string>
    <string name="infinite">∞</string>
    <string name="unknown">\?</string>
    <string name="coffee">Coffee</string>

    <string name="quick_settings_hidden">You can always enable quick settings again in the settings menu</string>
    <string name="quick_settings">Quick settings</string>
    <string name="hide_after_selection">Hide card after selection</string>
    <string name="show_quick_settings">Show quick settings</string>
    <string name="shake_to_reveal">Shake to reveal</string>
    <string name="listen_for_nearby">Listen for nearby phones</string>
    <string name="no_phones_found">It seems nobody is there… Are you and your palls using the same app? And is nearby enabled for them as well?</string>
    <string name="phones_found">Waiting for %1$s people to choose a card. %2$s have already made up their mind.</string>

    <string name="standard">Standard</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="natural">Natural</string>
    <string name="deck_type">Deck type</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about">About</string>

    <string name="error_google_api">There seems to be an error using this function right now… </string>
    <string name="please_allow_nearby">If you wish to make use of auto reveal when others are Nearby, please allow the permissions.</string>


</resources>
