<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_standard"
            android:icon="@drawable/ic_menu_standard"
            android:title="@string/standard"/>
        <item
            android:id="@+id/nav_fibonacci"
            android:icon="@drawable/ic_menu_ficonacci"
            android:title="@string/fibonacci"/>
        <item
            android:id="@+id/nav_shirt"
            android:icon="@drawable/ic_menu_shirt"
            android:title="@string/t_shirt"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
